# pankti

./: .clang-format  .clang-tidy  .clangd  .gitignore  .inferconfig  AGENTS.md  CMakeLists.txt  LICENSE-DOCS  Makefile  README.md  a.pank  a.pn  a.py  a.txt  backup.zig  benchmark_results.md  build.bat  build.zig  build.zig.zon  cachegrind.out.14663  checksum_gen.py  fib_with_stdbig.pank  map.pank  notes.md  pankti.cppcheck  release.py  run_benchmarks.sh  runsamples.sh  stress.sh  typos.toml  zig_version.txt
.github/workflows/: build_release.yml  deploy_website.yml  nightly_builds.yml  preview_builds.yml  zigtest.yml
.zed/: settings.json
benchmarks/: array.pank  fib.pank  loop.pank  nestcall.pank
benchmarks/results/: benchmark_results.json  benchmark_results.md
benchmarks/samples/: fib.pn  nestcall.pn
cmake/: getgitinfo.cmake  parseversion.cmake  tc_all_tcc_all.cmake  tc_all_zig_all.cmake  tc_win_mingw_32.cmake  tc_win_mingw_64.cmake  tc_zigcc.cmake  version.txt.in  win32rc.cmake  win_mingw_32.cmake  win_mingw_64.cmake
docs/: .gitignore  README.md  coverpage.typ  go.mod  hugo.toml  pdfmaker.py  pdfstyle.typ  typststyle.typ
docs/assets/: _custom.scss  _fonts.scss  katex.json
docs/bengali/docs/: _index.md  download.md
docs/english/: _index.md
docs/layouts/shortcodes/: stdfn.html
examples/: .function.pank.kate-swp  array_stdlib.pn  calculation.pn  evens.pn  function.pank  game.pn  pong.pn  prime.pn  small_solarsystem.pn  some_balls.pn  stdgfx.pank  stdgfx.pn  stdmath.pank  stdmath.pn  stdos.pank  stdos.pn  stdsystem.pn
extra/: pankti.desktop  panktiw.desktop
images/: bokbok_the_heron.aseprite  buno_the_heron.aseprite
misc/editors/: pankti-emacs-mode.el
notes/: panktiterms.md  stdlib.md
notes/cpank/: import_system.txt
notes/spec/: specification.md
sample/: arr.pank  array.pank  b.txt  big_iterfib.pank  c.pank  c.txt  d.pank  d.txt  e.pank  f.txt  fib35.pank  fib_iterative.pank  fib_with_stdbig.pank  fiben.pank  file.pank  g.pank  if_else.pank  import.pank  iterfib.pank  map.pank  stdbig.bn.pank  stdbig.pank  stdmap.bn.pank  stdmap.pank  stdmath.bn.pank  stdmath.pank  stdos.pank  stdstring.pank  x.txt
sample/projecteular_solutions/: 1.pank  2.pank  3.pank  4.pank  5.pank
scripts/: diagongen.py  kwgperfgen.py  run_benchmarks.sh
src/: CMakeLists.txt  alloc.h  ansicolors.zig  api.zig  argparse.c  argparse.h  arrayobj.c  ast.c  ast.h  astprinter.c  bengali.c  bengali.h  builtins.c  builtins.h  builtins.zig  compiler.c  compiler.h  compiler.zig  compiler_errors.zig  core.c  core.h  defaults.h  diagonctx.c  diagonctx.h  env.c  flags.c  flags.zig  gc.c  gc.h  gc.zig  gc_expr.c  gc_object.c  gcstmt.c  gfx.c  gfx.h  gfx_colors.c  gfx_constants.h  gfx_draw.c  gfx_font.c  gfx_image.c  (+82 more)
src/ast/: expr.c  printer.c  stmt.c
src/bengali/: bn.zig  names.zig
src/emfiles/: about.txt
src/gc/: gc.c  gcexpr.c  gcobject.c  gcstmt.c
src/gfxhelper/: gfxcore.c  gfxdraw.c  gfxfont.c  gfxhelper.c  gfxkeyboard.c
src/include/: alloc.h  ansicolors.h  argparse.h  ast.h  bengali.h  compiler.h  compiler_errors.h  core.h  defaults.h  diagonctx.h  env.h  errctx.h  flags.h  frontend.h  gc.h  gfxcore.h  gfxdraw.h  gfxfont.h  gfxhelper.h  interpreter.h  keywords.h  lexer.h  native.h  numbers.h  object.h  opcode.h  panktiterms.h  parser.h  parser_errornew.h  parser_errors.h  printer.h  pstdlib.h  ptypes.h  strescape.h  strpool.h  symtable.h  system.h  terminal.h  token.h  unicode.h  (+5 more)
src/lexer/: keywords.zig  lexer.zig
src/object/: arrayobj.c  mapobj.c  object.c  printobj.c  tostrobj.c
src/stdlib/: big.zig  file.zig  map.zig  math.zig  os.zig  os_errors.zig  pstdlib.c  stdarray.c  stdfile.c  stdgfx.c  stdlib.zig  stdmap.c  stdmath.c  stdos.c  stdstring.c  stdsystem.c  string.zig  string_errors.zig
src/templates/: kwlookup.gperf
src/tmpl/: diagon.tmpl.c  diagon.tmpl.h  diagonmsg.txt
src/utils/: utilfiles.c  utilnums.c  utilstr.c
tests/: CMakeLists.txt  main.py  pyproject.toml  test_lexer.c  test_main.c  test_parser.c  test_print.py  test_stdlib.py  test_stdlib_big.py  test_stdlib_math.py  tests.cmake
tests/frontend/: CMakeLists.txt  test_lexer.c  test_main.c  test_main.zig  test_parser.c  tests.cmake
tests/runtime/: CMakeLists.txt  script_runner.py  template.h  test_arithmetic.h  test_arithmetic.py  test_basics.h  test_bench.h  test_benchmarks.py  test_closure.h  test_closure.py  test_if.h  test_imports.h  test_internal.h  test_runtime.c  test_stdlib.h  test_stdlib.py  test_while.h  testcore.py  tester.h
tests/runtime/errors/: test_parser.h
tests/runtime/samples/: arithmetic.golden.pank  arithmetic.golden.pn  arithmetic.pank  arithmetic.pn  arithmetic_bom.golden.pn  arithmetic_bom.pank  bench_array.golden.pn  bench_array.pank  bench_fib.golden.pn  bench_fib.pank  bench_fib.pn  bench_loop.golden.pn  bench_loop.pank  bench_loop.pn  bench_nestcall.golden.pank  bench_nestcall.golden.pn  bench_string.pank  bench_string.pn  builtins.golden.pn  builtins.pn  closure_mutation.golden.pn  closure_mutation.pn  closure_shared.golden.pn  closure_shared.pn  func_basic.golden.pn  func_basic.pn  func_firstclass.golden.pn  func_firstclass.pn  if_else.golden.pn  if_else.pn  if_else_nested.golden.pn  if_else_nested.pn  import_alias.golden.pn  import_alias.pn  import_multiple.golden.pn  import_multiple.pn  logical_ops.golden.pn  logical_ops.pn  mixed_syntax.golden.pn  mixed_syntax.pn  (+47 more)
tests/runtime/samples/errors/: let_missing_ident.error.pn  let_missing_ident.pn
tests/samples/: print_1.pank  print_99.pank  print_hello_world.pank  stdlib_big_add.pank  stdlib_big_new.pank  stdlib_math_abs.pank  stdlib_math_ceil.pank  stdlib_math_cos.pank  stdlib_math_e.pank  stdlib_math_pi.pank  stdlib_math_sin.pank  stdlib_math_tan.pank
web/: index.html  script.js  serve  style.css
windows/: pankti.rc.in  panktisetup.iss.in  resource.h  windows.rc  windows.sln  windows.vcxproj
windows/panktikhata/: panktikhata.manifest  panktikhata.rc  panktikhata.static.manifest  panktikhata.vcxproj  resource.h
winres/: pankti.rc  pankti_gui.rc  pankti_gui.static.manifest  resource.h
(+37 files in other folders)
